src/test/deca/syntax/invalid/sansobjet/MinusInt.deca
// 
// Description: test soustraction incorrecte
// Resultat: erreur ligne 5: pas de deuxieme terme
{
    int i = 1-;
}
